<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bootcamppractica2022.presentation.navigation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.bootcamppractica2022.presentation.navigation.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_play"
        android:name="com.example.bootcamppractica2022.presentation.navigation.play.PlayFragment"
        android:label="@string/title_play"
        tools:layout="@layout/fragment_play" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.bootcamppractica2022.presentation.navigation.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_registration"
        android:name="com.example.bootcamppractica2022.presentation.register.RegistrationFragment"
        android:label="@string/title_registration"
        tools:layout="@layout/fragment_registration" />
</navigation>