<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewRegistration"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".RegistrationActiviyy">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolBar_registration"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/white">
        </Toolbar>

        <ImageView
            android:id="@+id/img_logoRegistration"
            android:layout_width="180dp"
            android:layout_height="76dp"
            android:layout_gravity="start"
            android:layout_marginHorizontal="40dp"

            android:background="@color/ambar"
            android:src="@mipmap/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/txt_create_account"
            android:id="@+id/txt_createAccountRegistration"
            android:textSize="22sp"
            android:textColor="@color/secondary_text"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:id="@+id/til_nombreRegistration"
            android:hint="@string/txt_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tie_nombreRegistration"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:id="@+id/til_emailRegistration"
            android:hint="@string/txt_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tie_emailRegistration"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:id="@+id/til_passwordRegistration"
            android:hint="@string/txt_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tie_passwordRegistration"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:text="@string/txt_lenght_password"
            android:textSize="12sp"
            android:textStyle="italic"
            android:id="@+id/txt_lenghtPasswordRegistration"
            android:textColor="@color/secondary_text"/>

        <Button
            android:id="@+id/btn_aceptarLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="40dp"
            android:paddingHorizontal="18dp"
            android:paddingVertical="10dp"
            android:text="@string/txt_accept"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:backgroundTint="@color/secondary_text"
            android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>