<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:background="@color/ambar"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/img_logoLogin"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="40dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:text="@string/txt_user"
            android:id="@+id/txt_userLogin"
            android:textSize="17sp"
            android:textColor="@color/secondary_text"
            android:textStyle="bold"/>


        <EditText
            android:id="@+id/edt_userLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:drawablePadding="16dp"
            android:layout_marginHorizontal="40dp"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:id="@+id/txt_passwordLogin"
            android:text="@string/txt_password"
            android:textColor="@color/secondary_text"
            android:textSize="17sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/edt_passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:drawablePadding="16dp"
            android:layout_marginHorizontal="40dp"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:clickable="true"
            android:id="@+id/txt_forgotPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/txt_forgot_password"
            android:textAlignment="textStart"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            android:textStyle="bold"
            android:focusable="true" />

        <Button
            android:id="@+id/btn_loginLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="40dp"
            android:paddingHorizontal="18dp"
            android:paddingVertical="10dp"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:backgroundTint="@color/secondary_text"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_optionsLogin"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:text="@string/txt_login_options"
            android:textAlignment="center"
            android:textColor="@color/secondary_text"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textStyle="italic" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp">

            <ImageView
                android:id="@+id/img_ic_appleLogin"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="40dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/img_ic_facebookLogin"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_ic_facebookLogin"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_ic_googleLogin"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_ic_facebookLogin"
                app:layout_constraintTop_toTopOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_no_cuentaLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_dont_account"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:clickable="true"
                android:id="@+id/txt_registroLogin"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_registration"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:textStyle="italic|bold"
                android:focusable="true" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:clickable="true"
            android:id="@+id/txt_invitadoLogin"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_continue_guest"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            android:textStyle="bold"
            android:focusable="true" />






    </LinearLayout>
</ScrollView>